--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,24 @@
 page-home {
 
+    .code {
+        margin-top: 30px;
+    }
+
+    ion-content {
+        margin-top: 40px;
+    }
+
+    .inplab {
+        background-color: #e4e4e4;
+        border-radius: 10px;
+    }
+
+    ion-card-content {
+        text-align: center;
+    }
+
+    h4 {
+        width: 100%;
+    }
+
 }
